2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: fixed bug
	(a button may be the sprite's parent therefore it should call execute_frame_tags(0))

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/samples/: cleanup

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp,
	* gameswf/gameswf_root.cpp,
	* gameswf/gameswf_movie.h:
	removed useless on_button_event()

2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.h: fixed the bug in struct event_id
	I add m_unused because of problem with hash<event_id, ...>
	the reason: sizeof(unsigned char+unsigned char+movie*)  == 8 
	and	 sizeof(unsigned char+unsigned char+Uint16+movie*)  == 8
	I think that compiler do aligment
	
2007-04-12  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: implemented MovieClipLoader, there are some bugs yet

2007-04-10  Thatcher Ulrich <tu@tulrich.com>

	* misc files: minimal changes to get gcc-4.0 compile working.  I
	haven't fixed warnings or bugs yet.

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_xml.*: moved to 
	* gameswf/as_classes/as_xml.*
	* gameswf/as_classes/as_MovieClipLoader.*: removed
	(obsoletly, the new version - as_mcloader.*, now is not finished)
	* gameswf/gameswf_as_sprite.*,
	* gameswf/gameswf_sprite.cpp: added loadMovie method
	* gameswf/gameswf_timer.cpp: cleanup

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/as_classes/as_array.cpp: processing of the following case is added
	new Array("ab", "cd", "ef", "gh", ...);
	* gameswf/gameswf_timer.*: processing of the multiparam setInterval
	function is added
	* gameswf/gameswf_root.cpp: protection of listener object against removal
	is added

2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files:
	rewritten gameswf_timer.* (listener was used),
	removed gameswf_xmlsocket.* (obsoletly, the new version - as_xmlsocket.*),
	added test_xmlsocket.(fla,swf),
	cleaning useless code
